# iiwa_admittance_ctrl

./: .gitignore  CMakeLists.txt  package.xml
data/: bag2txt.sh  plot_shared.m  record.sh
data/shared/: cmd_p.txt  eef.txt  f.txt  hdir.txt  myo_emg.txt  nwp.txt  pdir.txt  traj_dist
launch/: admittance_stff.launch  iiwa_admittance_ctrl.launch  nn_classification.launch
msg/: classification_result.msg  desired_command.msg
src/: admittance_ctrl.cpp  admittance_ctrl.h
src/force_client/: force_from_joy.cpp
src/training/: classification.cpp  classification.h  classification_bakup.cpp  classification_old.cpp  training_data.cpp
src/trajectory_planner/: trajectory_planner.cpp
src/validation_data/: validation.cpp  validation.h
src/variable_stiffness/: backup_calc.cpp  stiffness_calculation.cpp  stiffness_calculation.h
ts_kuka/: test_dirforcedist  test_dirforcedist_C_TYPE_CONTACT_CONCORDE  test_dirforcedist_C_TYPE_CONTACT_DEVIATION_C  test_dirforcedist_C_TYPE_CONTACT_DEVIATION_O  test_dirforcedist_C_TYPE_CONTACT_OPPOSITE  train_dirforcedist  train_dirforcedist_C_TYPE_CONTACT_CONCORDE  train_dirforcedist_C_TYPE_CONTACT_DEVIATION_C  train_dirforcedist_C_TYPE_CONTACT_DEVIATION_O  train_dirforcedist_C_TYPE_CONTACT_OPPOSITE
ts_mini45/: get_classes.m  test_complete  test_direction  test_dirforce  test_force  test_norm_force  train_complete  train_direction  train_dirforce  train_force  train_norm_force
validation/: admittance_emg.txt  admittance_force.txt  admittance_pose.txt  elab_data.m  shared_angle.txt  shared_class.txt  shared_emg.txt  shared_force.txt  shared_pose.txt
